resume html outline

--- a/index.html
+++ b/index.html
@@ -1,24 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Resume</title>  
-</head>
-<body>
-    <div class="grid-container">
-        <div>class="left_side"</div>
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>
-      </div>
-</body>
+    <title>My Resume</title>
+    <link rel="stylesheet" href="style.css"> 
+    </head>
+    <body>
+        <main>
+            <section class="title--section">
+                <figure>
+                    <img src="" alt="">
+                </figure>
+                <h1>Steve Gazouleas</h1>
+            </section>
+            <section class="subtitle--section">
+                <h2>Marketing Expert</h2>
+                <p>I am a sales and customer service expert with over a decade of experience adding value to businesses.</p>
+            </section>
+            <section class="contact--info">
+                <h4></h4>
+                <nav>
+                    <ul>
+                        <li class="contact_list_item"></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </nav>
+            </section>
+            <section class="expertise--section">
+                <article>
+                    <h3></h3>
+                    <br>
+                        <p></p>
+                </article>
+                <article>
+                    <h3></h3>
+                    <br>
+                    <h5></h5>
+                    <p class="job--subtitle"></p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <h5></h5>
+                    <p class="job--subtitle"></p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <br>
+                </article>
+                <article>
+                    <h3></h3>
+                    <br>
+                    <h5></h5>
+                    <p class="education--subtitle"></p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+
+                </article>
+            </section>
+        </main>
+    </body>
 </html>
