--- a/index.html
+++ b/index.html
@@ -11,58 +11,72 @@
         <main>
             <section class="title--section">
                 <figure>
-                    <img src="" alt="">
+                    <img class="headshot" src="https://media-exp1.licdn.com/dms/image/C4E03AQHWduzLaZP3hA/profile-displayphoto-shrink_800_800/0/1639772420749?e=1672272000&v=beta&t=CFB3qySVqH9RjDKAbEqD5vEF8nT7DGQ_e6pY3WFX7mM" alt="">
                 </figure>
-                <h1>Steve Gazouleas</h1>
+                <article class="parent--name--me">
+                    <h1 class="name--me">Steve Gazouleas</h1>
+                </article>
             </section>
             <section class="subtitle--section">
                 <h2>Marketing Expert</h2>
-                <p>I am a sales and customer service expert with over a decade of experience adding value to businesses.</p>
+                <p class="subtitle--section--p">I am a sales and customer service expert with over a decade of experience in adding value to businesses.</p>
             </section>
             <section class="contact--info">
-                <h4></h4>
+                <h4 class="contact--info--title">Contact Info</h4>
+                <hr>
                 <nav>
                     <ul>
-                        <li class="contact_list_item"></li>
-                        <li></li>
-                        <li></li>
+                        <li><img class="svg--img" src="phone-svgrepo-com.svg">713-502-4306</li>
+                        <br>
+                        <li><img class="svg--img"src="location-svgrepo-com.svg">Austin, TX 78705</li>
+                        <br>
+                        <li><img class="svg--img"src="mail-svgrepo-com.svg">stevejgaz@gmail.com</li>
+                        <br>
+                        <li class="svg--img">
+                            <img src="linkedin-svgrepo-com.svg" alt="Linkedin logo">
+                            <a target="blank" href="https://www.linkedin.com/in/stephen-gazouleas/">Linkedin</a></li>
+                        <br>
                     </ul>
                 </nav>
             </section>
             <section class="expertise--section">
                 <article>
-                    <h3></h3>
-                    <br>
+                    <h3>Expertise</h3>
+                        <p>My skillset is identified by my ability to work in a team, communicate, and problem solve.  Design and technology are areas that will vastly improve to make me a complete business minded machine. </p>
+                    <hr>
                         <p></p>
                 </article>
                 <article>
-                    <h3></h3>
-                    <br>
-                    <h5></h5>
+                    <h3>Proffesional History</h3>
+                    <hr>
+                    <h5>Home Consignment Center</h5>
                     <p class="job--subtitle"></p>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Sales</li>
+                        <li>Furniture Appraisal</li>
+                        <li>Design</li>
                     </ul>
-                    <h5></h5>
+                    <h5>Austin Canoe and Kayak</h5>
                     <p class="job--subtitle"></p>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Customer Service Rep</li>
+                        <li>Communication Expert</li>
+                        <li>Sales</li>
                     </ul>
-                    <br>
+                    <hr>
                 </article>
                 <article>
-                    <h3></h3>
-                    <br>
-                    <h5></h5>
+                    <h3>Educational History</h3>
+                    <hr>
+                    <h5>Austin Coding Academy</h5>
+                    <ul>
+                        <li>Web101 - HTML - CSS - JavaScript</li>
+                    </ul>
+                    <h5>Texas Tech University</h5>
                     <p class="education--subtitle"></p>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Bachelors Degree - Rawls College of Business - Marketing and Management</li>
+            
                     </ul>
 
                 </article>
