--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                 <h4 class="contact--info--title">Contact Info</h4>
                 <hr>
                 <nav>
-                    <ul>
+                    <ul class="contact--list">
                         <li><img class="svg--img" src="phone-svgrepo-com.svg">713-502-4306</li>
                         <br>
                         <li><img class="svg--img"src="location-svgrepo-com.svg">Austin, TX 78705</li>
                         <br>
                         <li><img class="svg--img"src="mail-svgrepo-com.svg">stevejgaz@gmail.com</li>
                         <br>
-                        <li class="svg--img">
-                            <img src="linkedin-svgrepo-com.svg" alt="Linkedin logo">
+                        <li>
+                            <img class="svg--img"src="linkedin-svgrepo-com.svg" alt="Linkedin logo">
                             <a target="blank" href="https://www.linkedin.com/in/stephen-gazouleas/">Linkedin</a></li>
                         <br>
                     </ul>
